Dinesh final code minus graph

--- a/RawData/clean_data_cardio.ipynb
+++ b/RawData/clean_data_cardio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4     0       0       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "4       0       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "15     0       0       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "8       1       0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "Ttest_indResult(statistic=-14.429236863506278, pvalue=4.149335835472366e-47)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,16 +633,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2a9043a6128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2a906df9320>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -662,6 +662,214 @@
    "source": [
     "sns.distplot(cardio_0[\"ap_hi\"], bins=20, fit=stats.norm, kde=False)\n",
     "sns.distplot(cardio_1[\"ap_hi\"], bins=20, fit=stats.norm, kde=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23055\n",
+      "5750\n",
+      "6174\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Observed\n",
+    "\n",
+    "normal_chol_attack = len(cardio_1[cardio_1[\"cholesterol\"] == 1])\n",
+    "print(normal_chol_attack)\n",
+    "\n",
+    "above_normal_chol_attack = len(cardio_1[cardio_1[\"cholesterol\"] == 2])\n",
+    "print(above_normal_chol_attack)\n",
+    "\n",
+    "well_above_normal_chol_attack = len(cardio_1[cardio_1[\"cholesterol\"] == 3])\n",
+    "print(well_above_normal_chol_attack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "normal cholesterol               23055\n",
+       "above normal cholesterol          5750\n",
+       "well above normal cholesterol     6174\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observed_cholesterol=pd.Series([normal_chol_attack,above_normal_chol_attack, well_above_normal_chol_attack],index = ['normal cholesterol', 'above normal cholesterol', 'well above normal cholesterol'])\n",
+    "observed_cholesterol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29330\n",
+      "3799\n",
+      "1892\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Expected\n",
+    "\n",
+    "normal_chol_no_attack = len(cardio_0[cardio_0[\"cholesterol\"] == 1])\n",
+    "print(normal_chol_no_attack)\n",
+    "\n",
+    "above_normal_chol_no_attack = len(cardio_0[cardio_0[\"cholesterol\"] == 2])\n",
+    "print(above_normal_chol_no_attack)\n",
+    "\n",
+    "well_above_normal_chol_no_attack = len(cardio_0[cardio_0[\"cholesterol\"] == 3])\n",
+    "print(well_above_normal_chol_no_attack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "normal cholesterol               29330\n",
+       "above normal cholesterol          3799\n",
+       "well above normal cholesterol     1892\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected_cholesterol=pd.Series([normal_chol_no_attack, above_normal_chol_no_attack, well_above_normal_chol_no_attack],index = ['normal cholesterol', 'above normal cholesterol', 'well above normal cholesterol'])\n",
+    "expected_cholesterol "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame([observed_cholesterol,expected_cholesterol]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = ['observed cholesterol','expected cholesterol']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>observed cholesterol</th>\n",
+       "      <th>expected cholesterol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>normal cholesterol</th>\n",
+       "      <td>23055</td>\n",
+       "      <td>29330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>above normal cholesterol</th>\n",
+       "      <td>5750</td>\n",
+       "      <td>3799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>well above normal cholesterol</th>\n",
+       "      <td>6174</td>\n",
+       "      <td>1892</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               observed cholesterol  expected cholesterol\n",
+       "normal cholesterol                            23055                 29330\n",
+       "above normal cholesterol                       5750                  3799\n",
+       "well above normal cholesterol                  6174                  1892"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Power_divergenceResult(statistic=12035.531891993222, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chisquare(df['observed cholesterol'], df['expected cholesterol'])"
    ]
   },
   {
