--- a/RawData/clean_data_cardio.ipynb
+++ b/RawData/clean_data_cardio.ipynb
@@ -92,9 +92,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 36(PythonData)",
+   "display_name": "Python 36 (PythonData)",
    "language": "python",
    "name": "pythondata"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
